changes to top bar background color on scroll, input color fixed in dark mode, attribution footer added

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,8 @@ body.dark {
 }
 
 #top-bar.styled {
-    background-color: #d65f8d;
+    /* background-color: #d65f8d; */
+    background-color: rgb(245, 245, 245);
     border-bottom-color: var(--theme-color);
     box-shadow: 0 0 10px var(--theme-color);
 }
@@ -175,11 +176,16 @@ form>* {
     color: #33313b;
     transition: 0.3s;
     display: flex;
-    background-color: #eee;
 }
 
 #input-container.input-focus {
     border-color: var(--theme-color-alt);
+}
+
+#input-container.dark-mode input,
+#input-container.dark-mode #x-icon-container {
+    color: #eee;
+    background-color: #33313b;
 }
 
 input {
@@ -187,18 +193,20 @@ input {
     border: none;
     padding-left: 15px;
     font-size: 16px;
+    background-color: white;
+    /* background-color: #eee; */
     /* line-height: 46px;
     padding: 0 10px;
     width: 100%;
     border: 2px solid var(--theme-color);
-    color: #33313b;
-    transition: 0.3s; */
+    color: #33313b; */
+    transition: 0.3s;
 }
 
-input.dark-mode {
+/* input.dark-mode {
     color: #eee;
     background-color: #33313b;
-}
+} */
 
 input:focus {
     outline: none;
@@ -217,6 +225,7 @@ input:focus {
     justify-content: center;
     background-color: white;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 #x-icon-container:hover #x-icon {
@@ -276,11 +285,11 @@ h2 {
 .gifs-container {
     display: flex;
     justify-content: center;
-    height: calc(90vh - var(--top-bar-height));
+    /* height: calc(90vh - var(--top-bar-height)); */
+    height: calc(92vh - var(--top-bar-height));
     overflow-y: scroll;
-    position: absolute;
+    /* position: absolute; */
     padding-top: 5vh;
-    /* margin: 5vh 0; */
     width: 100vw;
 }
 
@@ -301,4 +310,22 @@ h2 {
     cursor: pointer;
     border: 1px solid var(--theme-color);
     box-shadow: 0 0 1px var(--theme-color);
+    z-index: 2;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 3vh;
+    display: flex;
+    align-items: center;
+    color: var(--theme-color);
+}
+
+#attribution {
+    margin-left: 2vw;
+    font-size: 9px;
+    color: var(--theme-color);
 }
